kubernetes/apps/network/envoy-gateway/config/tcp.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "tcp.${SECRET_DOMAIN}"
  labels:
    type: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: "10.45.0.17"
  listeners:
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
